--- a/src/scss/sections/_section-components.scss
+++ b/src/scss/sections/_section-components.scss
@@ -254,7 +254,7 @@ main {
 	}
 
 	&.header-container-postup-h2 {
-		margin-bottom: 2rem
+		margin-bottom: 2.5rem
 	}
 
 	&.header-container-postup-h3 {
@@ -263,7 +263,7 @@ main {
 }
 
 .img-project-schedule {
-	max-width: 32rem;
+	max-width: 28rem;
 	width: 100%;
 	margin: 0;
 }
