--- a/src/scss/sections/_section-constraints.scss
+++ b/src/scss/sections/_section-constraints.scss
@@ -174,6 +174,10 @@
 $constraints-grid-item-padding-med: 1.5rem;
 
 @include breakpoint(med) {
+	#the-constraints {
+		padding: 4rem 0;
+	}
+
 	.constraints-grid-container {
 		width: 90vw;
 		gap: 0.5rem;
