--- a/src/scss/sections/_section-solution.scss
+++ b/src/scss/sections/_section-solution.scss
@@ -60,7 +60,7 @@
 
 @include breakpoint(med) {
 	#the-solution {
-		padding: 4rem 0;
+		padding: 4rem unset;
 	}
 
 	.the-solution-prototype_wrapper {
@@ -106,6 +106,11 @@
 }
 
 @include breakpoint(lg) {
+	#the-solution {
+		padding-top: 0;
+		padding-bottom: 6rem;
+	}
+
 	.the-solution-prototype_grid-container {
 		padding: 4rem;
 	}
