--- a/src/scss/utilities/_spacing.scss
+++ b/src/scss/utilities/_spacing.scss
@@ -132,6 +132,10 @@
 		margin-bottom: 0.5rem !important;
 	}
 
+	&-12 {
+		margin-bottom: 0.75rem !important;
+	}
+
 	&-16 {
 		margin-bottom: 1rem !important;
 	}
